# Python_for_Neoforge

./: .gitignore  MANIFEST.in  README.md  README_KR.md  pyproject.toml
examples/: ruby_mod.py
neoforge-mod/: README.md  build.gradle  gradle.properties  settings.gradle
neoforge-mod/src/main/java/com/pythonforneoforge/: GeneratedContent.java  GeneratedContentLoader.java  PythonForNeoForge.java
neoforge-mod/src/main/resources/: pack.mcmeta
neoforge-mod/src/main/resources/assets/python_for_neoforge/blockstates/: ruby_block.json  ruby_machine.json
neoforge-mod/src/main/resources/assets/python_for_neoforge/lang/: en_us.json
neoforge-mod/src/main/resources/assets/python_for_neoforge/models/block/: ruby_block.json  ruby_machine.json
neoforge-mod/src/main/resources/assets/python_for_neoforge/models/item/: ruby.json  ruby_apple.json  ruby_block.json  ruby_machine.json  ruby_pickaxe.json  ruby_sword.json
neoforge-mod/src/main/resources/assets/python_for_neoforge/pyneoforge/: generated.json
neoforge-mod/src/main/resources/data/python_for_neoforge/recipe/: ruby_block.json  ruby_from_block.json
python/pyneoforge/: __init__.py  build.py  cli.py  registry.py
python/pyneoforge/templates/neoforge-mod/: build.gradle  gradle.properties  settings.gradle
python/pyneoforge/templates/neoforge-mod/src/main/resources/: pack.mcmeta
tests/: test_registry.py
